tests/syntax/good/testfile-semicolon-3.go
package main

func main() {
	x := 1;
	x++
}
