tests/syntax/bad/testfile-var-3.go
package main

func main() { 1a := 1 }
